Installe Onchange and Parallelshell

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+      <link rel="shortcut icon" href="#">
       <!-- build:css css/main.css -->
       <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
       <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
@@ -25,7 +26,7 @@
       <div class="header-section">
         <div class="row">
           <div class="col-12 col-sm-4">
-            <img src="img/logo.png" alt="company logo">
+            <img src="/img/logo.png" alt="company logo">
           </div>
           <div class="col col-sm-8 pt-4">
             <h1>Japanese Sushi</h1>
