--- a/contactus.html
+++ b/contactus.html
@@ -25,7 +25,7 @@
       <div class="header-section">
         <div class="row">
           <div class="col-12 col-sm-4">
-            <img src="img/logo.png" alt="company logo">
+            <img src="/img/logo.png" alt="company logo">
           </div>
           <div class="col col-sm-8 pt-4">
             <h1>Japanese Sushi</h1>
