--- a/contactus.html
+++ b/contactus.html
@@ -116,7 +116,7 @@
     </div>
   <div class="col-12 col-sm-4">
     <p id="copyright">&copy; Copyright</p>
-    <a role="button" class="btn btn-link" href="tel:+4345556789><i class="fa fa-phone fa-lg"></i> 1-434-555-6789</a><br />
+    <a role="button" class="btn btn-link" href="tel:+4345556789"><i class="fa fa-phone fa-lg"></i> 1-434-555-6789</a><br />
     <a role="button" class="btn btn-link" href="mailto:nathankeh@samplemail.com"><i class="fa fa-envelope-o"></i> nathankeh@samplemail.com</a>
   </div>
   <div class="col-12 col-sm-4">
