--- a/contactus.html
+++ b/contactus.html
@@ -22,14 +22,16 @@
   <body>
     <!-- Header -->
     <header>
-      <div class="header-section">
-        <div class="row">
-          <div class="col-12 col-sm-4">
-            <img src="/img/logo.png" alt="company logo">
-          </div>
-          <div class="col col-sm-8 pt-4">
-            <h1>Japanese Sushi</h1>
-            <h2>Fresh and Authentic</h2>
+      <div class="container">
+        <div class="header-section">
+          <div class="row">
+            <div class="col-sm-4 text-center text-sm-left">
+              <img src="/img/logo.png" alt="company logo">
+            </div>
+            <div class="col-sm-8 pt-4 text-center text-sm-left">
+              <h1>Japanese Sushi</h1>
+              <h2>Fresh and Authentic</h2>
+            </div>
           </div>
         </div>
       </div>
